workloads/development/apigateway-dep.yaml
# Configuration for deploying an API Gateway without elasticsearch to a kubernetes cluster.
# An external elasticsearch needs to be up and running.
# The cluster should provide at least 4 GB of main memory.
#
# The full documentation is available from the Software AG Documentation website: 
# http://techcommunity.softwareag.com/ecosystem/documentation/webmethods/api_gateway/yai10-4/index.htm
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway-deployment
spec:
  replicas: 1
  
  selector:
    matchLabels:
      app: api-gateway-deployment
  template:
    metadata:
      labels:
        app: api-gateway-deployment
    spec:
      containers:
      - name: api-gateway-deployment
        # Please fill in the path to your api gateway image stored in a docker registry.
        image: harbor.aks.au-poc.com/library/softwareag/apigateway-trial:10.5.0.2
        # The default pull policy is IfNotPresent which causes the Kubelet to skip pulling an image if it already exists.
        # If you would like to always force a pull use "Always"
        imagePullPolicy: IfNotPresent 
        # Ports used in the docker image, the default ports are 5555, 9072 and 9240
        ports:
        - containerPort: 5555
          name: 5555tcp1
          protocol: TCP
        - containerPort: 9072
          name: 9072tcp1
          protocol: TCP
        - containerPort: 9240
          name: 9240tcp1
          protocol: TCP
        livenessProbe:
          failureThreshold: 4
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5555
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /rest/apigateway/health
            port: 5555
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 2
