workloads/development/apigateway-svc.yaml
# An example service for the deployment above.
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: development
  labels:
    app.kubernetes.io/name: api-gateway-deployment
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5555
      targetPort: 5555
      protocol: TCP 
  selector:
    app: api-gateway-deployment
