workloads/development/apigatewayui-svc.yaml
# An example service for the deployment above.
apiVersion: v1
kind: Service
metadata:
  name: api-gatewayui-service
  namespace: development
  labels:
    app.kubernetes.io/name: api-gateway-deployment
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9072
      targetPort: 9072
      protocol: TCP 
  selector:
    app: api-gateway-deployment
