workloads/development/elastic-svc.yaml
# An example service for the deployment above.
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  labels:
    app.kubernetes.io/name: elasticsearch-deployment
spec:
  type: NodePort
  ports:
    - name: http1
      port: 9200
      targetPort: 9200
  selector:
    app: elasticsearch-deployment
