workloads/development/apigateway-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apigateway-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api-gateway-dev.aks.au-poc.com
    secretName: api-gateway-tls-secret
  rules:
  - host: api-gateway-dev.aks.au-poc.com
    http:
      paths:
        - path: /
          backend:
            serviceName: api-gateway-service
            servicePort: 5555
        - path: /apigatewayui/
          backend:
            serviceName: api-gatewayui-service
            servicePort: 9072
